--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a class="btn btn-dark m-3" href="https://www.linkedin.com/in/albert-shrestha/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a class="btn btn-dark m-3" href="https://vengeance.medium.com/" target="_blank"><i class="fab fa-medium"></i></a>
                 <a class="btn btn-dark m-3" href="https://www.instagram.com/_albert.stha_/" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a class="btn btn-dark m-3" href="https://github.com/Vengeance07" target="_blank"><i class="fa-github"></i></a>
+                <a class="btn btn-dark m-3" href="https://github.com/Vengeance07" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
         
